docs/src/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Do+Hyeon&family=Poppins:wght@400;600;700&family=Rajdhani:wght@400;500&display=swap');

@keyframes menuBurguerSpawn {
  0% {
    left: -10rem;
  }

  55% {
    left: 1rem;
  }

  100% {
    left: 0;
  }
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Do Hyeon", sans-serif;
  color: #0f141a;

  cursor: none;
}

body,
html {
  width: 100%;
  height: fit-content;
  
  transition: background .5s linear;

  background-color: #e6e6e6;
  
  overflow-x: hidden;
  scroll-behavior: smooth;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10rem;

  width: 100vw;
}

.error-div {
  display: flex;
  justify-content: center;
  align-items: center;

  text-align: center;

  height: 100vh;
}

p {
  font-family: "Poppins", sans-serif;
}

a {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  text-decoration: none;
  transition: .6s linear;
}

a::after{
  content: "";
  width: 0%;
  height: 1px;
  background-color: currentColor;
  
  position: relative;
  transition: .6s ease;
}



a:hover {
  color: #8983f7;

  transition: .3s linear;

}

li:hover > a::after {
  width: 100%;
  transition: .8s ease;
}


canvas {
  pointer-events: none;
}


nav {
  position: fixed;
  width: 100%;
  height: 10vh;
  display: flex;

  background-color: #e6e6e6;

  transition: .5s linear;
  z-index: 7;
}

nav.scrolled {
  box-shadow:
  0px 1.8px 3.6px rgba(3, 2, 2, 0.021),
  0px 5px 10px rgba(0, 0, 0, 0.03),
  0px 12.1px 24.1px rgba(0, 0, 0, 0.039),
  0px 40px 80px rgba(0, 0, 0, 0.06);

  transition: .6s ease;
}

.nav-btns {
  display: flex;
  justify-content: space-around;
  align-items: center;

  position: fixed;
  right: 5.3rem;
  bottom: 93vh;

  width: fit-content;
  height: fit-content;

}

.nav-ul {
  position: relative;
  top: 50%;
  right: 1rem;
  width: 90%;
  height: 50%;

  display: flex;
  justify-content: space-evenly;
  align-items: center;
  list-style: none;

  transition: .8s ease-in;
}

li{
  transition: .7s ease;
}

.menu-btn-div {
  position: fixed;
  left: 2rem;
  top: 4rem;

  opacity: 1;

  transition: .8s ease;
}


.burger input {
  display: none;
}


.inner-cursor {
  position: fixed;
  left: 10px;
  width: 10px;
  height: 10px;

  display: flex;

  transform: translate(-50%, -50%);

  background-color: #fff;
  mix-blend-mode: difference;

  border-radius: 50%;

  pointer-events: none;

  transition: width .5s, height .5s, background 1s linear, opacity .5s;
  z-index: 7;
}

.inner-cursor.grow {
  width: 20px;
  height: 20px;

  opacity: .1;
  
  transition: width .5s, height .5s, opacity .5s;
}

.inner-cursor.decrease {
  width: 5px;
  height: 5px;

  transition: width .5s ease, height .5s ease;
}


.outer-cursor {
  position: fixed;
  left: 10px;
  width: 25px;
  height: 25px;

  transform: translate(-50%, -50%);

  border: 1px solid #0f141a;
  border-radius: 50%;
  mix-blend-mode: darken;

  pointer-events: none;
  transition: width .5s, height .5s, background 1s linear, mix-blend-mode .5s;
  z-index: 7;
}


.outer-cursor.outer-decrease {
  width: 20px;
  height: 20px;

  transition: width .5s ease, height .5 ease;
}

/* Dark Mode Button */


/* The switch - the box around the slider */
.switch {
  --width-of-switch: 3.5em;
  --height-of-switch: 2em;
  /* size of sliding icon -- sun and moon */
  --size-of-icon: 1.4em;
  /* it is like a inline-padding of switch */
  --slider-offset: 0.3em;
  position: relative;
  
  width: var(--width-of-switch);
  height: var(--height-of-switch);
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: fixed;
  top: 2.6rem;
  left: 14.5rem;
  right: 0;
  bottom: 0;
  width: var(--width-of-switch);
  height: var(--height-of-switch);
  background-color: #f4f4f5;
  transition: .4s;
  border-radius: 30px;
  z-index: 10;
}


.slider:before {
  position: absolute;
  content: "";
  height: var(--size-of-icon,1.4em);
  width: var(--size-of-icon,1.4em);
  border-radius: 20px;
  left: var(--slider-offset,0.3em);
  top: 50%;
  transform: translateY(-50%);
  background: linear-gradient(40deg,#ff0080,#ff8c00 70%);
  ;
  transition: .4s;
}

input:checked + .slider {
  background-color: #303136;
}

input:checked + .slider:before {
  left: calc(100% - (var(--size-of-icon,1.4em) + var(--slider-offset,0.3em)));
  background: #303136;
  /* change the value of second inset in box-shadow to change the angle and direction of the moon  */
  box-shadow: inset -3px -2px 5px -2px #8983f7, inset -10px -4px 0 0 #a3dafb;
}

/* About Content */

#about-section {
  margin-top: 20rem;
}

.about-div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.about-header {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.about-header span , .project-card-desc a{
  font-family: "Rajdhani", sans-serif;
  font-weight: 500;
  color: #686868;
  text-align: center;
}

.about-header h1{
  font-family: "Bebas Neue", cursive;
  font-size: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: transparent;
  -webkit-text-stroke: 1px #717388;
  filter: drop-shadow(0 0 25px #717388);
  gap: 1rem;
}

.about-text {
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 15rem;
  width: 90vw;

  font-size: 1.5rem;
}

.resume-div {
  margin-top: 5rem;
  text-align: center;
}

.resume-div span {
  font-family: "Bebas Neue", cursive;
}

.resume-div .resume-group {
  display: flex;
  justify-content: center;
  align-items: center;
}
/* ... */

